# internal/auth/model/entities/errors.go
@@ -1,0 +1,8 @@
+package entities
+
+import "errors"
+
+var (
+	ErrUserAlreadyExists = errors.New("user with this email or username already exists")
+	ErrPasswordNotSecure = errors.New("provided password is not secure enough")
+)
